--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 @import './styles/admin';
 @import './styles/company';
 @import './styles/front';
+@import './styles/job';
 @import './styles/login';
 @import './styles/navbar';
 @import './styles/signup';
