--- a/src/styles/_company.scss
+++ b/src/styles/_company.scss
@@ -120,3 +120,57 @@
 }
 .mt-small { margin-top: 1.5rem !important;  }
 
+.cprofile
+ {
+     &-right {
+        flex: 0.7;
+     }
+
+     &-jobs {
+         display: flex;
+         flex-wrap: wrap;
+         justify-content: space-evenly;
+     }
+
+     &-title {
+         text-align: center;
+         font-size: 1.4rem;
+     }
+
+     &-card {
+         width: 22rem;
+         padding: 1rem;
+         box-shadow: 0 .2rem 1rem rgba($color: #000000, $alpha: 0.45);
+         border-bottom: 5px solid #236CA4;
+         margin-top: 1rem;
+
+         &-bot {
+             display: flex;
+             justify-content: space-between;
+             align-items: center;
+             padding: 0 1rem;
+
+             & > p {
+                 font-size: 1rem;
+                 font-weight: 500;
+             }
+         }
+
+         & > p {
+             text-align: justify;
+             color: #777;
+         }
+     }
+
+     &-btn {
+         padding: .5rem 1.5rem;
+         border: none;
+         border-radius: 3px;
+         color: #fff;
+         background-color: #236CA4;
+         text-transform: uppercase;
+         font-weight: 500;
+         cursor: pointer;
+     }
+    
+}
