--- a/src/styles/_front.scss
+++ b/src/styles/_front.scss
@@ -11,15 +11,30 @@
     &-link {
         font-size: 1.2rem;
         color: black;
-        padding-left: 2rem;
+        padding: 0 1rem;
         font-weight: 600;
         color: #236CA4
+    }
+
+    &-linkbtn {
+        font-size: 1.1rem;
+        color: black;
+        font-weight: 600;
+        background-color: #236CA4;
+        color: #fff;
+        padding: 8px 1.5rem;
+        border-radius: 3rem;
+        align-self: flex-start;
+        margin: 0 .4rem;
+        margin-left: .6rem;
+
     }
 
     &-list {
         text-decoration: none !important;
         list-style: none;
         display: flex;
+        align-items: center;
     }
     &-logo {
         font-size: 1.8rem;
@@ -35,7 +50,7 @@
     }
     &-left {
         flex: 0.35;
-        padding: 2.5rem 0;
+        padding: 2.8rem 0;
         padding-left: 3rem;
 
         &-main {
@@ -70,7 +85,8 @@
     }
 
     &-login {
-        padding: .8rem 1rem;
+        padding: .8rem 1.5rem;
+        display: inline-block;
         border: none;
         background-color: #236CA4;
         font-size: 1.1rem;
@@ -82,10 +98,6 @@
         box-shadow: 0 6px 10px rgba($color: #000000, $alpha: 0.45);
         border-radius: 2rem;
         margin-top: 1rem;
-
-        &:not(:last-child) {
-            margin-right: 1rem;
-        }
     }
 
     &-btns {
