--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -16,6 +16,14 @@
         font-size: 2.5rem;
         text-transform: uppercase;
         color:  #236CA4;
+        padding-bottom: 0;
+
+        &-sub {
+            font-size: 1.8rem;
+            text-transform: uppercase;
+        color:  #236CA4;
+        margin-top: -1.3rem;
+        }
        // text-align: center;
     }
 
